인피니티 스크롤링 학습

--- a/alecture/index.html
+++ b/alecture/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
+<html>
+  <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sleact</title>
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>슬리액</title>
     <style>
         html, body {
             margin: 0;
@@ -23,13 +23,14 @@
             box-sizing: border-box;
         }
     </style>
-    <link rel="stylesheet" href="https://a.slack-edge.com/bv1-9/client-boot-styles.dc0a11f.css?cacheKey=gantry-1613184053" crossorigin="anonymous" />
-    <link rel="shortcut icon" href="https://a.slack-edge.com/cebaa/img/ico/favicon.ico" />
-    <link href="https://a.slack-edge.com/bv1-9/slack-icons-v2-16ca3a7.woff2" rel="preload" as="font" crossorigin="anonymous" />
-</head>
-<body>
+     <link rel="stylesheet" href="https://a.slack-edge.com/bv1-10/client-boot-styles.4SZ32R5W.min.css?cacheKey=gantry-1666570643" crossorigin="anonymous" />
+     <link rel="shortcut icon" href="https://a.slack-edge.com/cebaa/img/ico/favicon.ico" />
+     <link href="https://a.slack-edge.com/bv1-10/slack-icons-v2-fe043a5.woff2" rel="preload" as="font" crossorigin="anonymous" />
+  </head>
+  <body>
     <div id="app">
+
     </div>
-    <script src="./dist/app.js"></script>
-</body>
+    <script src="/dist/app.js"></script>
+  </body>
 </html>
